--- a/src/main/webapp/backend/config/dbconfig.json
+++ b/src/main/webapp/backend/config/dbconfig.json
@@ -3,6 +3,6 @@
     "debug" : false,
     "host" : "localhost",
     "user" : "root",
-    "password" : "",
+    "password" : "1234",
     "database" : "expenses"
 }
